--- a/codeshare/newAuthorize.html
+++ b/codeshare/newAuthorize.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>newAuthorize（授权编辑页）</title>
     <link rel="stylesheet" href="./public/bootstrap/css/bootstrap.css"/>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./grids.css"/>
     <link rel="stylesheet" href="./public/iconfont/iconfont.css"/>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -49,57 +50,57 @@
             <hr>
             <form class="form-horizontal" role="form">
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-1 control-label">
+                    <label for="inputEmail3" class="pure-u-1-8 control-label">
                         <i class="icon iconfont icon-bitian red"></i>
                         市场方
                     </label>
-                    <div class="col-sm-3">
+                    <div class="pure-u-1-4">
                         <input type="text" class="form-control" id="inputEmail3" placeholder="市场方" value="CA" readonly="readonly">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-1 control-label">
+                    <label for="inputPassword3" class="pure-u-1-8 control-label">
                         <i class="icon iconfont icon-bitian red"></i>
                         承运方
                     </label>
-                    <div class="col-sm-3">
+                    <div class="pure-u-1-4">
                         <input type="text" class="form-control" id="inputPassword3" placeholder="承运方">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-1 control-label">
+                    <label for="inputPassword3" class="pure-u-1-8 control-label">
                         <i class="icon iconfont icon-bitian red"></i>
                         始发地
                     </label>
-                    <div class="col-sm-3">
+                    <div class="pure-u-1-4">
                         <input type="text" class="form-control" id="inputPassword3" placeholder="始发地">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-1 control-label">
+                    <label for="inputPassword3" class="pure-u-1-8 control-label">
                         <i class="icon iconfont icon-bitian red"></i>
                         目的地
                     </label>
-                    <div class="col-sm-3">
+                    <div class="pure-u-1-4">
                         <input type="text" class="form-control" id="inputPassword3" placeholder="目的地">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-1 control-label">
+                    <label for="inputPassword3" class="pure-u-1-8 control-label">
                         <i class="icon iconfont icon-bitian red"></i>
                         舱位代码
                     </label>
-                    <div class="col-sm-3">
+                    <div class="pure-u-1-4">
                         <input type="text" class="form-control" id="inputPassword3" placeholder="多个用/分隔" maxlength="50">
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-1 control-label">
+                    <label for="inputPassword3" class="pure-u-1-8 control-label">
                         <i class="icon iconfont icon-bitian red"></i>
                         同步策略
                     </label>
-                    <div class="col-sm-3">
+                    <div class="pure-u-1-4">
                         <select name="" id="" class="form-control">
                             <option value="">选择</option>
                             <option value="1">自动</option>
