--- a/codeshare/synchronize.html
+++ b/codeshare/synchronize.html
@@ -133,8 +133,8 @@
                     <li><a href="#">下一页</a></li>
                 </ul>
                 共10页&nbsp;&nbsp;
-                到第&nbsp;&nbsp;<input type="text" />&nbsp;&nbsp;页
-                <button type="button" class="btn btn-default btn-sm">确定</button>
+                到第&nbsp;&nbsp;<input type="text" class="common_input" style="width: 40px" />&nbsp;&nbsp;页
+                <button type="button" class="btn btn-default btn-sm pagebar_btn">确定</button>
             </nav> 
 
         </div>
