--- a/brand1/html/index.html
+++ b/brand1/html/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>品牌查询页面</title>
-    <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="../public/bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" href="../styles/css/jquery_ui.datepicker-modify.css"/>
     <link rel="stylesheet" href="../styles/css/jquery-ui-timepicker-addon.css"/>
     <link rel="stylesheet" href="../styles/css/common.css">
@@ -231,10 +231,10 @@
 
 </div>
 
-<script type="text/javascript" src="../../bower_components/jquery/dist/jquery.js"></script>
-<script type="text/javascript" src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
-<script type="text/javascript" src="../../bower_components/headroom.js/dist/headroom.js"></script>
-<script type="text/javascript" src="../../bower_components/headroom.js/dist/jQuery.headroom.js"></script>
+<script type="text/javascript" src="../public/jquery/jquery.js"></script>
+<script type="text/javascript" src="../public/bootstrap/js/bootstrap.js"></script>
+<script type="text/javascript" src="../public/headroom.js/headroom.js"></script>
+<script type="text/javascript" src="../public/headroom.js/jQuery.headroom.js"></script>
 <script type="text/javascript" src="../js/index.js"></script>
 </body>
 </html>
