--- a/阿里字体/index.html
+++ b/阿里字体/index.html
@@ -5,14 +5,9 @@
     <title></title>
     <style type="text/css">
         .icon {
-            /* 通过设置 font-size 来改变图标大小 */
-            width: 1.5em; height: 1.5em;
-            /* 图标和文字相邻时，垂直对齐 */
+            width: 30px; height: 30px;
             vertical-align: -0.15em;
-            /* 通过设置 color 来改变 SVG 的颜色/fill */
             fill: currentColor;
-            /* path 和 stroke 溢出 viewBox 部分在 IE 下会显示
-               normalize.css 中也包含这行 */
             overflow: hidden;
         }
     </style>
@@ -23,12 +18,12 @@
         <ul>
             <li>
                 <svg class="icon" aria-hidden="true">
-                    <use xlink:href="#icon-sort-small"></use>
+                    <use xlink:href="#icon-bitian"></use>
                 </svg>
             </li>
             <li>
                 <svg class="icon" aria-hidden="true">
-                    <use xlink:href="#icon-bitian"></use>
+                    <use xlink:href="#icon-sort-small"></use>
                 </svg>
             </li>
             <li>
