--- a/cs/newRbdConfig.html
+++ b/cs/newRbdConfig.html
@@ -121,7 +121,9 @@
                         <input type="text" class="form-control" id="inputPassword3" placeholder="销售生效日期">
                     </div>
                     <label  class="glyphicon glyphicon-calendar iconfont_box"></label>
-
+                    <div class="err_tip">
+                        这里是错误提示信息
+                    </div>
                 </div>
 
                 <div class="form-group">
